src/styles/styles.css
:root {
	--default-font-family: 'Lato', sans-serif;
	--default-font-color: rgb(222, 207, 253);
	--default-font-color2: hsl(259.57, 70%, 90.2%, 0.65);
	--default-font-color3: hsl(260, 24%, 66%);

	--default-secundary-font-color: rgb(6, 232, 232);
	--default-secundary-font-color-2: hsl(180, 50%, 46.67%, 0.9);

	--default-background-color: hsl(271.2, 35.21%, 15%);
	--default-background-color-darker: hsla(250, 35.21%, 8%, 0.8);

	--default-background-color-shadow: rgb(15, 12, 20);
	background-color: var(--default-background-color);
	font-size: 25px;
	scroll-behavior: smooth;
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

/* || GENERAL STYLES */

h1,
h2,
h3 {
	font-family: 'Raleway', sans-serif !important;
	margin: 0.7rem 0;
}

/* % always with the property width */

a {
	font-family: var(--default-font-family);
	color: var(--default-font-color);
	display: inline-block;
}
/* || UTILITIES */
.reveal {
	animation: reveal-animation ease-in both;
	animation-timeline: view();
	animation-range: entry 20% cover 30%;
}
.last-reveal {
	animation: reveal-animation linear both;
	animation-timeline: view();
	animation-range: entry 10% cover 20%;
}
@keyframes reveal-animation {
	from {
		opacity: 0;
		transform: translate(0vh, 15vh);
		scale: 0.7;
	}
	to {
		opacity: 1;
		transform: translate(0vh, 0);
		scale: 1;
	}
}
.reveal-experience {
	animation: reveal-experience-animation linear both;
	animation-timeline: view();
	animation-range: entry 20% cover 45%;
}
@keyframes reveal-experience-animation {
	from {
		opacity: 0;
		transform: translate(0vh, 15vh);
	}
	to {
		opacity: 1;
		transform: translate(0vh, 0);
	}
}
/* || SITEWIDE */

@keyframes show-presentation-main-skill {
	0% {
		opacity: 0;
		transform: translate(0px, -10px);
	}

	100% {
		opacity: 1;
		transform: translate(0px, 0px);
	}
}
@media (max-width: 1100px) {
	:root {
		font-size: 25px;
	}
}

@media (max-width: 885px) {
	:root {
		font-size: 20px;
	}
}

@media (max-width: 665px) {
	:root {
		font-size: 15px;
	}
}

@media (max-width: 510px) {
	:root {
		font-size: 15px;
	}
}

@media (max-width: 350px) {
	:root {
		font-size: 10px;
	}
}

